environments/gloo-edge/argo-rollouts/echo/echo-rollout/strategies/blue-green/base/echo-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: echo-rollout
  namespace: echo
spec:
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - image: hashicorp/http-echo
          args:
            - "-text=version:blue"
            - -listen=:8080
          imagePullPolicy: Always
          name: echo-active
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      activeService: echo-active 
      previewService: echo-preview
      autoPromotionEnabled: true
      autoPromotionSeconds: 20
