environments/gloo-edge/argo-rollouts/echo/echo-rollout/strategies/blue-green/base/echo-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: echo-active
            namespace: echo
